[gd_scene load_steps=8 format=2]

[ext_resource path="res://Warehouse.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://AudioManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 1
ambient_light_color = Color( 0.317647, 0.411765, 0.596078, 1 )
ambient_light_energy = 0.8
tonemap_mode = 4
ssao_enabled = true
ssao_radius = 0.1

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.100084, 0, 0.994979, 0, 1, 0, -0.994979, 0, 0.100084, 0, 0.925199, 21.8338 )

[node name="warehouse" parent="." instance=ExtResource( 1 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 19.8861, 0 )
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 0.707057, -0.492836, -0.507131, -0.114961, -0.78771, 0.605224, -0.697749, -0.369628, -0.613613, -22.9824, 17.8485, -30.2717 )
light_color = Color( 0.984314, 0.87451, 0.792157, 1 )
light_energy = 0.25

[node name="DirectionalLight3" type="DirectionalLight" parent="."]
transform = Transform( -0.598232, 0.541412, 0.590755, -0.0527344, -0.762227, 0.645159, 0.799586, 0.354801, 0.484539, 21.1323, 20.0514, 30.5158 )
light_color = Color( 0.984314, 0.87451, 0.792157, 1 )
light_energy = 0.25

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AudioManager" parent="." instance=ExtResource( 5 )]

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="Enemy" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.69439, 1.1197, -7.31404 )

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -14.7774, 1.1197, 9.22461 )

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 8.37628, 2.72972, 7.82095 )

[node name="Enemy4" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 20.65, 2.96568, -16.8504 )

[node name="Enemy5" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3009, 2.96568, -30.1268 )

[connection signal="enemy_destroyed" from="Player" to="." method="_on_Player_enemy_destroyed"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="spray_decal" from="Player" to="." method="_on_Spray_decal"]
[connection signal="walk" from="Player" to="." method="_on_Player_walk"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_pressed" from="UI" to="." method="_on_UI_button_pressed"]
